fix bug z-index do not work
Type: BF
Jira: HALO-1867

--- a/client/applications/admin/style/layout.less
+++ b/client/applications/admin/style/layout.less
@@ -23,9 +23,18 @@ body,
     overflow: hidden;
 
     #main {
+      position: relative;
       flex: 1;
-      display: flex;
       z-index: 8;
+      .inner {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
     }
   }
 }
